# dns-resolver

./: Cargo.toml  README.md
src/: main.rs
src/dns/: helpers.rs  mod.rs  types.rs
