[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
serde = { version="1.0.164", features = ["derive"] }
serde_bytes = "0.11.9"

[dev-dependencies]
pretty_assertions = "1.3.0"
hex = "0.4.3"
